@@ -1,2 +1,2 @@
-This test performs an animation of the translate() and scale() operators. It animates over 2 seconds. At 0.5 and 1 second it takes a snapshot and expects the result to be within range.
+This test performs an animation of the translate() and scale() operators. It animates over 1 seconds. At 0.25 and 0.5 seconds it takes a snapshot and expects the result to be within range.
 PASS
