@@ -1,3 +1,15 @@
+2010-01-14  Ojan Vafai  <ojan@chromium.org>
+
+        Reviewed by Eric Seidel.
+
+        animations/combo-transform-translate+scale.html failed on Snow Leopard Debug Bot
+        https://bugs.webkit.org/show_bug.cgi?id=33461
+
+        Make test half as long. Remove a setTimeout and tweak tolerances to
+        reduce flakiness.
+
+        * animations/combo-transform-translate+scale.html:
+
 2010-01-14  Darin Fisher  <darin@chromium.org>
 
         Reviewed by Brady Eidson.
